--- a/assets/style.css
+++ b/assets/style.css
@@ -3,25 +3,31 @@
 }
 
 :root { 
-    --primary-color: rgba(221, 16, 88, 0.934); 
+    --primary-color: rgb(221, 16, 67); 
     --Secondary-color: rgba(75, 7, 211, 0.266); 
     --background-color: rgba(6, 55, 83, 0.899);
     --writing-color: rgba(43, 7, 204, 0.859); 
     --dark: black; 
     --light: white; 
+    --true-background-color: rgba(70, 71, 166, 0.762); 
 }
 
 body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-    font-size: 1.75rem; 
+    padding: 0;
+    margin: 0;
     line-height: 1.5;
     color: var(--writing-color); 
-    background-color: var(--light);
+    background-color: var(--true-background-color);
 }
 
 h1, 
-h2 {
+h2,
+h3,
+h4,
+h5,
+h6
+ {
     margin: 0; 
 }
 p { 
@@ -164,7 +170,7 @@ main {
     font-size: 0.9rem; 
 }
 
-.contact address { 
+.main-section-contact address { 
     display: flex; 
     flex-wrap: wrap; 
     justify-content: space-around;
@@ -172,7 +178,7 @@ main {
     height: 100% 
 }
 
-.contact address a { 
+.main-section-contact address a { 
     color: var(--primary-color); 
     padding: 5px; 
     text-decoration: none;
@@ -187,13 +193,36 @@ main {
     display: inline-block; 
 }
 
-@media screen and (min-width: 768px) {
-    .flex-item :first-child { 
-        min-height: 150px; 
-    } 
-} 
-@media screen and (max-width: 768px) { 
-    .flex-item, .flex-item::first-child { 
+.main-section-contact address a:hover { 
+    background-size: 100% 88%; 
+    color: var(--Secondary-color); 
+}
+
+.Loading { 
+    background-image: url("/Pictures/loading-screen-featured-image.jpg");
+}
+
+.AwaitAnnouncement {
+    background-image: url("/Pictures/Under-Construction-Success-Image.webp");
+}
+
+@media screen and (max-width: 768px) {
+    .flex-item, 
+    .flexitem:first-child { 
         flex-basis: 100%;
     }
+}
+
+.flex-item :first-child {
+    min-height:150px;
+}
+
+main-banner {
+    justify-content: center; 
+    text-align: center;
+}
+
+.contact address { 
+    flex-direction: column;
+    align-items: flex-start;
 }
